# agentsec-preflight

./: .gitattributes  .gitignore  CLAIM_CEILING.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MIGRATION_MAP.md  NOTICE_DECISION.md  NO_ACTIVE_CI_DECISION.md  README.md  RELEASE_DRAFT.md  SECURITY.md  pyproject.toml
agentsec_preflight/: __init__.py
canaries/: runtime_basic_20.jsonl
docs/: action_request_examples.md  canary_families.md  capability_card_examples.md  future_public_repo_plan.md  policies.md  quickstart.md  report_semantics.md  runtime_fixture_pack.md  runtime_recon_plan.md  sample_security_review.md  scope_boundary.md  start-here.md
examples/: certified_safe_mcp_overclaim.json  destructive_db_update_missing_preflight.json  email_draft_tool.json  email_send_missing_approval.json  github_merge_forbidden.json  mcp_server_no_source_trace.json  readonly_db_query.json  stale_deprecated_candidate.json
policies/: hermes_style_default.yaml  mcp_default_policy.yaml  openclaw_style_default.yaml
receipts/: runtime_block_receipt.json  runtime_hold_receipt.json  runtime_no_action_receipt.json  runtime_pass_draft_only_receipt.json
reports/: runtime_sample_block_report.json  runtime_sample_hold_report.json  runtime_sample_no_match_report.json  runtime_sample_pass_report.json  sample_agent_security_review.md  sample_block_report.json  sample_hold_report.json  sample_no_match_report.json  sample_pass_report.json
schemas/: agentsec_preflight_input.schema.json  agentsec_preflight_receipt.schema.json  agentsec_preflight_report.schema.json
tests/: test_cli.py  (+3 more)
(+35 files in other folders)
